--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ResumeBuilder - Professional Resume Templates</title>
-    <meta name="description" content="Build competitive, ATS-friendly resumes with our easy-to-use builder. Choose from professional templates and create your perfect resume today." />
-    <meta name="author" content="ResumeBuilder" />
+    <title>Resume Cook - Professional Resume Templates</title>
+    <meta name="description" content="Resume Cook helps you whip up competitive, ATS-friendly resumes in minutes with intuitive tools and polished templates." />
+    <meta name="author" content="Resume Cook" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="ResumeBuilder - Professional Resume Templates" />
-    <meta property="og:description" content="Build competitive, ATS-friendly resumes with our easy-to-use builder." />
+    <meta property="og:title" content="Resume Cook - Professional Resume Templates" />
+    <meta property="og:description" content="Build competitive, ATS-friendly resumes with Resume Cook's intuitive builder." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
