--- a/index.html
+++ b/index.html
@@ -27,6 +27,76 @@
     <meta name="twitter:title" content="Resume Cook - Professional Resume Templates" />
     <meta name="twitter:description" content="Resume Cook helps you whip up competitive, ATS-friendly resumes in minutes with intuitive tools and polished templates." />
     <meta name="twitter:image" content="https://resumecook.com/og-image.png?v=1" />
+
+    <!-- JSON-LD Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Resume Cook",
+      "url": "https://resumecook.com",
+      "description": "Resume Cook helps you whip up competitive, ATS-friendly resumes in minutes with intuitive tools and polished templates.",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Web Browser",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "featureList": [
+        "ATS-friendly resume templates",
+        "AI-powered resume enhancement",
+        "Multiple professional templates",
+        "PDF export",
+        "Real-time preview",
+        "LinkedIn import"
+      ],
+      "screenshot": "https://resumecook.com/og-image.png",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "150",
+        "bestRating": "5",
+        "worstRating": "1"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Resume Cook",
+      "url": "https://resumecook.com",
+      "logo": "https://resumecook.com/favicon.svg",
+      "sameAs": []
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://resumecook.com/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Templates",
+          "item": "https://resumecook.com/templates"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Resume Builder",
+          "item": "https://resumecook.com/builder"
+        }
+      ]
+    }
+    </script>
   </head>
 
   <body>
